cmd/openshift/operator/kodata/tekton-addon/1.5.0/addons/05-tkncliserve/tkn_cli_serve.yaml
# Copyright 2021 The Tekton Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tkn-cli-serve
  namespace: openshift-pipelines
  labels:
    app.kubernetes.io/component: tkncliserve
    app.kubernetes.io/instance: default
    app.kubernetes.io/part-of: tekton-pipelines
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tkn-cli-serve
  template:
    metadata:
      labels:
        app: tkn-cli-serve
    spec:
      containers:
        - name: tkn-cli-serve
          image: docker.io/rupali/serve-tkn:v2
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tkn-cli-serve
  namespace: openshift-pipelines
  labels:
    app.kubernetes.io/component: tkncliserve
    app.kubernetes.io/instance: default
    app.kubernetes.io/part-of: tekton-pipelines
spec:
  selector:
    app: tkn-cli-serve
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tkn-cli-serve
  namespace: openshift-pipelines
  labels:
    app.kubernetes.io/component: tkncliserve
    app.kubernetes.io/instance: default
    app.kubernetes.io/part-of: tekton-pipelines
spec:
  path: /tkn
  to:
    kind: Service
    name: tkn-cli-serve
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
